Fix overflow and added the website title

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,7 @@ body {
   font-size: 100%;
   font-family: "Allura", cursive;
   font-family: "Montserrat", sans-serif;
+  overflow: hidden;
 }
 
 p {
